--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -18,6 +18,8 @@
     <button id="options-btn">
       <i class="fa fa-cog"></i>
   </button>
+
+  <button id="run-btn">Run</button>
   
   <!-- Options Menu (Initially Hidden) -->
   <div id="options-menu">
@@ -77,7 +79,6 @@
       <div class="description-border">
         <p id="Description"></p>
       </div>
-      
 
 
 
