General display changes

--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -96,7 +96,7 @@
       </section>
 
       <div class="description-border">
-        <p id="Description" style="visibility: hidden;"></p>
+        <!-- <p id="Description" style="visibility: hidden;"></p> -->
       </div>
 
 
