--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -32,6 +32,7 @@
                 <a href="play.html" id="GoToPlayPage"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
                 <a href="level_select.html"><button class="start-btn">Level Select</button></a>
+                <a href="sandbox.html"><button class="start-btn">Sandbox</button></a>
             </div>
 
             <!-- the options menu popup -->
