--- a/main/templates/sandbox.html
+++ b/main/templates/sandbox.html
@@ -1,121 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/style.css">
-    <title>GateKeeper - Main</title>
+    <title>GateKeeper - Sandbox</title>
     <meta charset="utf-8" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bangers&family=Belanosima:wght@400;600;700&family=Modak&family=Rampart+One&display=swap" rel="stylesheet">
     <!-- Link the font icons from font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <style>
+      *{
+        font-family: "Comic Sans MS", "Comic Sans", cursive;
+      }
+    </style>
   </head>
   <body>
-    <button id="options-btn">
-      <i class="fa fa-cog"></i>
-  </button>
+    <h1><strong>Work In progress</strong></h1>
+    <p>Based off of our current solution, there is only 1 way to do this quickly: Make a copy of each JS file, and modify them to behave how they should for sandbox mode.</p>
+    <p>It should go without saying, but that would be terrible design.</p>
+    <p>The other option involves a slight reorganization of our current repo. Long story short, every class needs to be modularized, and a new file would need to be created
+      to run p5js main functions like setup() and draw().
+    </p>
+    <p>Thus, a different main file would be imported for sandbox mode. The Game object may need to be different as well, but that is still manageable.</p>
 
-  <button id="run-btn">Run</button>
-  
-  <!-- Options Menu (Initially Hidden) -->
-  <div id="options-menu">
-         <button class="exit-btn" id="close-options">
-              <i class="fa-solid fa-xmark"></i>
-        </button>
-        <div class="options-title">
-              <p>Settings</p>
-        </div>
-          <div class="volume-container">
-              <div class="volume-icon">
-                  <i class="fa-solid fa-volume-off"></i>
-              </div>
-              <div class="volume-slider">
-                  <input type="range" id="volume-slider" min="0" max="100" value="50">
-              </div>
-          </div>
-  
-          <div class="music-container">
-              <div class="music-icon">
-                  <i class="fa-solid fa-music"></i>
-              </div>
-              <div class="music-slider">
-                  <input type="range" id="music-slider" min="0" max="100" value="50">
-              </div>
-          </div>
-  
-      <!-- Bottom Section with Back Button -->
-      <div class="bottom-options-section">
-          <button id="back-to-main">Home</button>
-      </div>
-  </div>
-  <section>
-    <div class="popup-overlay" id="popup" onclick="closePopup(event)">
-      <div class="win-popup" onclick="event.stopPropagation()">
-        <div class="top-win-section">
-          <div class="win-title">
-            <p>You win!</p>
-          </div>
-        </div>
-  
-        <!-- Next Level Button -->
-        <button class="win-button" onclick="loadNextLevel()">Next Level</button>
-        <button class="win-button" onclick="closePopupWin()">Stay here</button>
-        <button class="win-button" onclick="window.location.href='./index.html'">Bring Me Home</button>
-      </div>
-    </div>
-  </section>
+    <p>May be best anyways, since we might want to get rid of all this Flask stuff.</p>
 
-  <!-- Slide-out Gate Info Panel -->
-  <div id="gateInfoPanel" class="side-panel">
-    <button id="togglePanelBtn">☰</button>
-    <div id="gateInfoContent" class="panel-content">
-      <h3>Level Instructions</h3>
-      <p id="levelDesc" style="padding: 0 22%;"></p>
-      <h3>Gate Descriptions</h3>
-      <ul id="gateList"></ul>
-    </div>
-  </div>
-
-  <!-- Gate Description Popup -->
-  <div id="gateDescPopup" class="desc-popup" style="display: none;">
-    <div class="desc-content" id="descContent">
-      <p id="descText"></p>
-    </div>
-  </div>
-
-
-    <main>
-      <!-- Added background to canvas -->
-      <section id="">
-        <h1 id="Level-Name"></h1>
-        
-      </section>
-
-      <div class="description-border">
-        <!-- <p id="Description" style="visibility: hidden;"></p> -->
-      </div>
-
-
-
-
-
-
-
-    </main>
-    <script src="../static/spatialHash.js"></script>
-    
-    <script src="../static/NodeClass.js"></script>
-
-    <script src="../static/drawGates.js"></script>
-    
-    <script src="../static/GameSounds.js"></script>
-    <script src="../static/GateKeeperObjects.js"></script>
-    <script src="../static/sound_effect.js"></script>
-    <script src="../static/options.js"></script>
-    <script src="../static/getInfoPanel.js"></script>
+    <img src="https://minecraft.wiki/images/thumb/AMCM_Flint_and_Steel.jpeg/800px-AMCM_Flint_and_Steel.jpeg?b5263" alt="Flint and Steel">
   </body>
 </html>
