--- a/main/static/style.css
+++ b/main/static/style.css
@@ -11,7 +11,7 @@
   height: 100vh;
   width: 100%;
   margin: 5px;
-  background-color: white; /* Same as the start page */
+  background-color: #4287f5; /* Same as the start page */
   display: flex;
   justify-content: left;
   
@@ -312,7 +312,7 @@ canvas {
   left: -300px; 
   width: 300px;
   height: 100%;
-  background-color: white;
+  background-color: #4287f5;
   color: white;
   transition: left 0.3s ease;
   z-index: 100;
@@ -341,12 +341,7 @@ canvas {
   box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 }
 
-.panel-content {
-  background: white;
-}
-
 .panel-content h3 {
-  background: red;
   margin-bottom: 15px;
   font-size: 25px;
   font-style: bold;
@@ -361,22 +356,14 @@ canvas {
   padding-bottom: 5px;
 }
 
-#levelDesc {
-  margin-bottom: 10px;
-  padding: 8px 10px;
-  border-radius: 5px;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
 #gateList {
-  background: white;
   list-style: none;
+  padding-left: 0;
   text-align:center;
 }
 
 #gateList li {
-  background-color: #4287f5;
+  background-color: #7289da;
   margin-bottom: 10px;
   padding: 8px 10px;
   border-radius: 5px;
@@ -405,7 +392,7 @@ canvas {
 }
 
 .desc-content {
-  background: white;
+  background: #4287f5;
   color: white;
   padding: 20px 30px;
   border-radius: 10px;
