--- a/main/assets/styles/style.css
+++ b/main/assets/styles/style.css
@@ -334,7 +334,7 @@ canvas {
   top: 0;
   left: -300px; 
   width: 300px;
-  height: 100%;
+  height: 86.8vh;
   background-color: #4287f5;
   color: white;
   transition: left 0.3s ease;
@@ -365,7 +365,6 @@ canvas {
 }
 
 .panel-content h3 {
-  margin-bottom: 15px;
   font-size: 25px;
   font-style: bold;
   text-align: center;
@@ -376,25 +375,46 @@ canvas {
      1px  1px 0 #000;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
-  padding-bottom: 5px;
+  background-color: #2161d8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  text-shadow: 1px 1px black;
 }
+
+#levelDesc{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4em;
+}
+
 
 #gateList {
   list-style: none;
   padding-left: 0;
   text-align:center;
+  margin-top: 2em;
+  display: flex;
+  justify-content: center;
 }
 
 #gateList li {
-  background-color: #7289da;
+  background-color: #f73a3a;
+  border: 2px solid black;
   margin-bottom: 10px;
-  padding: 8px 10px;
+  padding: 5px 35px;
   border-radius: 5px;
   margin-right: 10px;
   margin-left: 10px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 1.5em;
   transition: background-color 0.2s ease;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  text-shadow: 1px 1px black;
 }
 
 #gateList li:hover {
