--- a/main/assets/styles/style.css
+++ b/main/assets/styles/style.css
@@ -17,6 +17,8 @@
   
 }
 
+
+
 #topDiv {
   position: absolute;
   top: 130px;
@@ -32,6 +34,7 @@ h1 {
   text-shadow: 3px 2px black;
   display: flex;
   border-bottom: 2px solid black;
+  padding-left: 10px;
 }
 p {
   font-size: 1.5em;
@@ -80,7 +83,7 @@ canvas {
   top: 60px;
   right: 20px;
   width: 320px;
-  background: white;
+  background: linear-gradient(90deg,rgb(125,125,125),rgb(220,220,220),rgb(220,220,220),rgb(125,125,125));;
   border: 2px  solid black;
   padding: 1em;
   border-radius: 15px;
@@ -90,24 +93,22 @@ canvas {
 }
 
 #options-menu * {
-  background: rgb(247, 58, 58);
+  background: transparent;
 }
 
 .options-title {
   width: 80%;
   text-align: center;
-  box-shadow: 0px 3px 6px 1px rgb(104, 104, 104); /* 3D shadow */
-  border: 2px solid black;
   border-radius: 10px;
-  font-size: 1.2em;
+  font-size: 1.4em;
   font-weight: bold;
   padding: 10px;
   color: white;
   -webkit-text-stroke: 1px black;
   text-shadow: 3px 2px black;
   margin: auto;
-  box-shadow: 0px 5px 5px 1px black;
   margin-right: 2.5em;
+  text-decoration: underline;
 }
 
 .options-title p{
@@ -191,7 +192,7 @@ canvas {
   padding: .3em .5em;
   -webkit-text-stroke: 1px black;
   text-shadow: 3px 2px black;
-  box-shadow: 0px 5px 10px 1px black;
+  box-shadow: 0px 5px 5px 1px black;  
   border: 2px solid black;
   border-radius: 5px;
 }
@@ -203,7 +204,7 @@ canvas {
   padding: .3em .4em .3em .2em;
   -webkit-text-stroke: 1px black;
   text-shadow: 3px 2px black;
-  box-shadow: 0px 5px 10px 1px black;
+  box-shadow: 0px 5px 5px 1px black;  
   border: 2px solid black;
   border-radius: 5px;
 }
@@ -241,9 +242,11 @@ canvas {
 
 .volume-slider input::-moz-range-thumb, .music-slider input::-moz-range-thumb {
   width: 25px;
-  height: 25px;
+  height: 35px;
   background: rgb(247, 58, 58);
   cursor: pointer;
+  border: 2px solid black;
+  box-shadow: 0px 5px 5px 1px black;  
 }
 
 /* Back to Main Page Button */
@@ -342,14 +345,14 @@ canvas {
   top: 0;
   left: -300px; 
   width: 300px;
-  height: 100%;
-  background-color: #4287f5;
+  height: 47.5em;
+  background: linear-gradient(90deg,rgb(125,125,125),rgb(220,220,220),rgb(220,220,220),rgb(125,125,125));
   color: white;
   transition: left 0.3s ease;
   z-index: 100;
   box-shadow: 2px 0 8px rgba(0, 0, 0, 0.3);
   border: 2px solid black;
-  border-radius: 5px;
+  border-radius: 15px;
 }
 
 .side-panel.open {
@@ -359,7 +362,7 @@ canvas {
 
 #togglePanelBtn {
   position: absolute;
-  right: -30px;
+  right: -32px;
   top: 50%;
   transform: translateY(-50%);
   background-color: white;
@@ -372,9 +375,23 @@ canvas {
   box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 }
 
+#levelDesc {
+  background-color: transparent;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 2px black;
+  font-size: 1.8em;
+  ;
+}
+.panel-content{
+  background: linear-gradient(90deg,rgb(125,125,125),rgb(220,220,220),rgb(220,220,220),rgb(125,125,125));
+  border-radius: 15px;
+}
+
 .panel-content h3 {
   margin-bottom: 15px;
-  font-size: 25px;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  font-size: 28px;
   font-style: bold;
   text-align: center;
   text-shadow:
@@ -382,27 +399,35 @@ canvas {
      1px -1px 0 #000,
     -1px  1px 0 #000,
      1px  1px 0 #000;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+  text-decoration: underline;
+  padding-top: 10px;
   padding-bottom: 5px;
+  background: transparent;
+  border-radius: 15px;
 }
 
 #gateList {
   list-style: none;
   padding-left: 0;
   text-align:center;
+  background-color: rgb(125,125,125);
 }
 
 #gateList li {
-  background-color: #7289da;
+  background-color: rgb(247,58,58);
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
   margin-bottom: 10px;
   padding: 8px 10px;
   border-radius: 5px;
   margin-right: 10px;
   margin-left: 10px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 20px;
   transition: background-color 0.2s ease;
+  border: 2px solid black;
+  box-shadow: 0px 5px 5px 1px black;
+  font-size: 1.5em;
 }
 
 #gateList li:hover {
