--- a/main/assets/styles/start.css
+++ b/main/assets/styles/start.css
@@ -33,6 +33,7 @@
   align-items: center;
   height: 40em;
   width: 80%;
+  margin-bottom: 5%;
 }
 /* style the title text */
 .start-title p {
@@ -297,11 +298,14 @@
 
 .sound-button{
   position: absolute;
-  bottom: calc(10vh);
-  right: 3vh;
-  height: 10vh;
-  width: 10em;
-  margin-top: 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 240px;
+  height: 187.5px;
+  bottom: 2%;
+  right: 1%;
 }
 .sound-button button{
   background-color: #f0b047;
@@ -326,18 +330,50 @@
 }
 
 
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent; 
+  border-radius: 20px;
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #636363; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555555; 
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 
 
 /* Support Popup Styling and Positioning */
 #supportPopup{
-  height: 46em;
+  max-height: 46em;
+  height: 90vh;
   width: 40em;
   background-color: #2b71f3;
   position: absolute;
   display: none;
   border-radius: 25px;
   border: 4px solid black;
+
+  overflow-y: auto;
 }
 .support-exit-btn{
   display: inline;
