--- a/main/assets/styles/style.css
+++ b/main/assets/styles/style.css
@@ -196,6 +196,14 @@ canvas {
   justify-content: center;
 }
 
+#run-btn:hover {
+  background-color: #bd780a;
+}
+
+#run-btn:active {
+  transform: scale(0.95);
+}
+
 /* Sliders */
 .volume-container, .music-container {
   height: 3em;
@@ -322,7 +330,7 @@ canvas {
 }
 
 .win-popup {
-  background: white;
+  background: #4287f5;
   color: black;
   fill: #f0b047;
   border-radius: 8px;
@@ -355,20 +363,20 @@ canvas {
 }
 
 .win-button:active {
-  background: #cc0000;
   transform: scale(0.95);
 }
 
 .win-title{
   text-align: center;
-  box-shadow: 0px 3px 6px 1px rgb(104, 104, 104);
+  /* box-shadow: 0px 3px 6px 1px rgb(104, 104, 104); */
   border: 2px solid black;
   border-radius: 5px;
   border-top: none;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-}
-.win-title p{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+
+  background-color: #636363;
+
   color: white;
   font-size: 2.2em;
   font-family: "Modak", serif;
@@ -418,13 +426,16 @@ canvas {
   font-family: "Modak", serif;
   -webkit-text-stroke: 2px black;
   font-size: 1.8em;
-  ;
+
+  display: block;
 }
 .panel-content{
   background: linear-gradient(90deg,rgb(125,125,125),rgb(220,220,220),rgb(220,220,220),rgb(125,125,125));
   border-radius: 15px;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
+
+  text-align: center;
 }
 
 .panel-content h3 {
@@ -520,7 +531,7 @@ canvas {
   border: 2px solid black;
   border-radius: 8px;
   cursor: pointer;
-  z-index: 5002;
+  z-index: 99;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 
 }
@@ -534,6 +545,36 @@ canvas {
   transform: scale(.9);
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent; 
+  border-radius: 20px;
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #636363; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555555; 
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 /* Selector to style the entire page */
 
 
